--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 * {
     padding: 0;
     margin: 0;
-    overflow: hidden;
+    overflow-x: hidden;
+    /* background-color: #3b4cca; */
+}
+body {
+    background-color: #3b4cca;
 }
