--- a/src/components/Pokemon/Pokemon.css
+++ b/src/components/Pokemon/Pokemon.css
@@ -1,5 +1,46 @@
 .pokemon__container {
     width: 250px;
-    height: 100px;
-    margin: 1em;
+    height: 400px;
+    margin: 1.5em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #ffde00;
+    border-radius: 1.5em;
+    box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.6);
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.6);
+    -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.6);
+}
+.pokemon__container:hover {
+    transform: scale(1.05);
+    background-color: #ebcf1e;
+}
+.image__container {
+    width: 100%;
+    height: 50%;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    /* background-color: inherit; */
+}
+/* .pokemon__card {
+} */
+.pokemon__image {
+    background-position: center;
+    object-fit: cover;
+    height: 100%;
+}
+.pokemon__container h3 {
+    font-family: 'Pokemon Solid', sans-serif;
+    /* font-weight: bold; */
+    letter-spacing: 0.2em;
+    font-size: 28px;
+    color: #cc0000;
+}
+.pokemon__number {
+    font-family: 'Pokemon Solid', sans-serif;
+    font-weight: normal;
+    font-size: 16px;
+    color: #cc0000;
 }
