--- a/src/components/ListOfPokemons.css
+++ b/src/components/ListOfPokemons.css
@@ -6,11 +6,11 @@
     height: 100vh;
 }
 .pokemon__title {
-    font-size: 32px;
+    margin: 1em 0;
+    font-size: 24px;
     width: 100%;
     color: #ebcf1e;
-    letter-spacing: 0.1em;
-    font-family: 'Pokemon Solid', sans-serif;
+    font-family: 'Press Start 2P', cursive;
     display: flex;
     justify-content: center;
 }
@@ -32,7 +32,7 @@
     overflow: hidden;
     overflow: hidden;
     color: #ebcf1e !important;
-    font-family: 'Pokemon Solid', sans-serif !important;
+    font-family: 'Press Start 2P', cursive !important;
     height: 70px;
     line-height: 2.8em;
     font-size: 1.1em !important;
