--- a/src/components/PokemonData/PokemonData.css
+++ b/src/components/PokemonData/PokemonData.css
@@ -18,25 +18,26 @@
 .pokemon-single__title {
     height: auto;
     overflow: hidden;
-    font-family: 'Pokemon Solid', sans-serif;
+    font-family: 'Press Start 2P', cursive;
     font-size: 2em;
     color: #ebcf1e;
-    letter-spacing: 0.2em;
+    font-size: 40px;
     /* margin: 0.5em 0 0.2em 0; */
 }
 .pokemon-single__char {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    margin: 1em 0;
     /* height: 100px; */
 }
 .pokemon-single__p {
     margin: 0 1em;
     color: white;
     -webkit-text-stroke: #cc0000;
-    font-family: 20px;
+    font-family: 24px;
     -webkit-text-stroke-width: 1px;
-    font-family: 'Pokemon Solid', sans-serif;
+    font-family: 'Press Start 2P', cursive;
 }
 .container__type {
     display: flex;
@@ -50,14 +51,14 @@
     margin: 1em;
 }
 .pokemon__abilities {
-    font-family: 'Pokemon Solid', sans-serif;
-    font-size: 16px;
+    font-family: 'Press Start 2P', cursive;
+    font-size: 12px;
     color: #3b4cca;
     /* word-break: 1em; */
     border: solid 3px white;
     background-color: #cc0000;
     border-radius: 1em;
-    width: 100px;
+    width: 120px;
     height: 50px;
     display: flex;
     margin: 0 1em;
